[package]
name = "monty_hall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tqdm = "=0.4.4"
rand = "=0.8.5"
clap = { version = "=4.1.13", features = ["derive"] }
pprof = { version = "=0.11.1", features = ["flamegraph"] }
